plugins {
    id 'java'
    id 'jacoco'
    id 'checkstyle'
    id 'org.springframework.boot' version '3.3.5'
    id 'io.spring.dependency-management' version '1.1.6'
    id "com.google.cloud.tools.jib" version "3.4.4"
}

group = 'sh.rime.demo'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

ext {
    shoreVersion = "2.2.0"
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}


repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {

    compileOnly("org.projectlombok:lombok")
    annotationProcessor("org.projectlombok:lombok")
    annotationProcessor("org.mapstruct:mapstruct-processor")
    implementation("sh.rime.reactor:shore-r2dbc")
    implementation("sh.rime.reactor:shore-log")
    implementation("sh.rime.reactor:shore-web")
    implementation("sh.rime.reactor:shore-limit")
    implementation("sh.rime.reactor:shore-rabbitmq")
    implementation("sh.rime.reactor:shore-s3")
    testImplementation("sh.rime.reactor:shore-test")

}

tasks.named('test') {
    finalizedBy jacocoTestReport
    useJUnitPlatform()
    testLogging {
        minGranularity = 3
        events "passed", "skipped", "failed"
    }
}

jacocoTestReport {
    reports {
        xml.required = true
        csv.required = false
        html.required = true
    }
}

dependencyManagement {
    imports {
        mavenBom "sh.rime.reactor:shore-bom:$shoreVersion"
    }
    resolutionStrategy {
        cacheChangingModulesFor(0, "seconds")
    }
}

jib {
    allowInsecureRegistries = true
    from {
        image = "youtaqiu/jre-otel:21"
    }
    to {
        image = "youtaqiu/${project.name}"
        tags = ["latest"]
    }
    container {
        creationTime = 'USE_CURRENT_TIMESTAMP'
        jvmFlags = ['-Djava.security.egd=file:/dev/./urandom', '-Dfile.encoding=utf-8', '-Dnacos.logging.default.config.enabled=false', '-Duser.timezone=GMT+08', '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED', '-Xshare:off', '-javaagent:/opentelemetry.jar']
    }
}